crates/haneul-display/src/v2/snapshots/haneul_display__v2__parser__tests__hex_literal_only_underscores.snap
---
source: crates/haneul-display/src/v2/parser.rs
expression: "strands(r#\"{0x___u8}\"#)"
---
Error: Invalid 'u8' at offset 3: cannot parse integer from empty string
