crates/haneul-display/src/v2/snapshots/haneul_display__v2__parser__tests__hex_literal_only_underscores_no_suffix.snap
---
source: crates/haneul-display/src/v2/parser.rs
expression: "strands(r#\"{0x____}\"#)"
---
Error: Unexpected '}' at offset 7, expected one of 'u128', 'u16', 'u256', 'u32', 'u64', or 'u8'
