crates/haneul-display/src/v2/snapshots/haneul_display__v2__parser__tests__hex_literal_whitespace.snap
---
source: crates/haneul-display/src/v2/parser.rs
expression: "strands(r#\"{x '1234'}\"#)"
---
Error: Unexpected whitespace followed by string "1234" at offset 4, expected one of ':', '|', or '}'
