crates/haneul-display/src/v2/snapshots/haneul_display__v2__parser__tests__hex_literals.snap
---
source: crates/haneul-display/src/v2/parser.rs
expression: "strands(\"{x'1234' | x'0d0e0f'}\")"
---
Expr(
    Expr {
        alternates: [
            Chain {
                root: Some(
                    ByteArray(
                        [
                            18,
                            52,
                        ],
                    ),
                ),
                accessors: [],
            },
            Chain {
                root: Some(
                    ByteArray(
                        [
                            13,
                            14,
                            15,
                        ],
                    ),
                ),
                accessors: [],
            },
        ],
        transform: None,
    },
)
