crates/haneul-display/src/v2/snapshots/haneul_display__v2__parser__tests__identifier_bare_underscore.snap
---
source: crates/haneul-display/src/v2/parser.rs
expression: "strands(r#\"{_}\"#)"
---
Error: Invalid identifier "_" at offset 1
