crates/haneul-display/src/v2/snapshots/haneul_display__v2__parser__tests__identifier_with_leading_underscore.snap
---
source: crates/haneul-display/src/v2/parser.rs
expression: "strands(r#\"{_field | __private | _123mixed}\"#)"
---
{ _field
| __private
| _123mixed
}
